# ratatui-unity

./: .gitignore  Cargo.toml  README.md  build_all.sh  link.xml  package.json  rust-toolchain.toml  strip_wasm_features.py
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yml
Plugins/WebGL/: RatatuiPlugin.jslib
Plugins/iOS/ratatui_unity.xcframework/: Info.plist
Plugins/macOS/: libratatui_unity.bundle
Runtime/: ITab.cs  RatatuiRenderer.cs  RatatuiTerminal.cs  StyledText.cs
Runtime/Enums/: MapResolution.cs
Runtime/Input/: TerminalHoverState.cs  TerminalInput.cs  TerminalKeyEvent.cs
Samples~/BasicUsage/: RatatuiDemo.cs  RatatuiShared.cs  RatatuiUnity.Samples.BasicUsage.asmdef
Samples~/BasicUsage/Tabs/: ColorsTab.cs  DashboardTab.cs  InputTab.cs  ServersTab.cs  TracerouteTab.cs
src/: color.rs  commands.rs  font.rs  lib.rs  renderer.rs  terminal.rs
