[package]
name = "ratatui_unity"
version = "0.1.0"
edition = "2021"

[lib]
name = "ratatui_unity"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ratatui = { version = "0.30", default-features = false, features = [
    "widget-calendar",
] }
fontdue = "0.9"
time = { version = "0.3", default-features = false }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[target.wasm32-unknown-emscripten]
rustflags = [
    "-C",
    "target-feature=-bulk-memory,-bulk-memory-opt,-call-indirect-overlong",
]
